--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
                 <h2>New Users</h2>
                 <div class="user-list">
                     <div class="user">
-                        <img src="images/pe (1).jpg">
+                        <img src="assets/imgs/pe (1).jpg">
                         <h2>Jack</h2>
                         <p>54 Min Ago</p>
                     </div>
                     <div class="user">
-                        <img src="images/pe (2).jpg">
+                        <img src="assets/imgs/pe (2).jpg">
                         <h2>Amir</h2>
                         <p>3 Hours Ago</p>
                     </div>
                     <div class="user">
-                        <img src="images/pe (3).jpg">
+                        <img src="assets/imgs/pe (3).jpg">
                         <h2>Ember</h2>
                         <p>6 Hours Ago</p>
                     </div>
@@ -220,7 +220,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="images/pe (4).jpg">
+                        <img src="assets/imgs/pe (4).jpg">
                     </div>
                 </div>
 
