edit a path for a plus img

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <p>6 Hours Ago</p>
                     </div>
                     <div class="user">
-                        <img src="images/plus.png">
+                        <img src="assets/imgs/plus.png">
                         <h2>More</h2>
                         <p>New User</p>
                     </div>
